[package]
name = "keepawake"
version = "0.4.3"
authors = ["Segev Finer <segev208@gmail.com>"]
edition = "2021"
rust-version = "1.63"
description = "Keep your computer awake"
repository = "https://github.com/segevfiner/keepawake-rs/"
license = "MIT"
keywords = ["caffeinate", "systemd-inhibit", "idle", "sleep", "power-management"]
categories = ["command-line-utilities"]
exclude = ["/tools/"]

[profile.release]
strip = true
lto = "thin"

[dependencies]
anyhow = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "3.12"

[build-dependencies]
shadow-rs = "0.21"
